syntax = "proto3";

option go_package = "proto/stakeholders-service";

import "google/api/annotations.proto";

service StakeholdersService{

  rpc Login(LoginRequest) returns (LoginResponse){
    option(google.api.http) = {
      post: "/api/users/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse){
    option(google.api.http) = {
      post: "/api/users"
      body: "*"
    };
  }

}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message LoginResponse{
  string accessToken = 1;
}

message RegisterRequest{
  User user = 1;
}

message RegisterResponse{
  string statusCode = 1;
}

message User{
  string username = 1;
  string password = 2;
  string role = 3;
  bool IsActive = 4;
  Personal personalInfo = 5;
}

message Personal{
  string name = 1;
  string surname = 2;
  string email = 3;
  string profilePic = 4;
  string biography = 5;
  string motto = 6;

}